--- a/A_dbms/templates/dbms/index_dbms.html
+++ b/A_dbms/templates/dbms/index_dbms.html
@@ -84,7 +84,7 @@
                 <a href="{% url 'dbms:provide_track_soondue' %}">{{ track_soondue_count }}</a></h3>
         {% endif %}
         {% if soondue_cooperator_count > 0 %}
-            <h3 class="col-lg-4 col-md-4 col-sm-6 col-xs-12">一月内到期协议：
+            <h3 class="col-lg-4 col-md-4 col-sm-6 col-xs-12">三月内到期协议：
                 <a href="{% url 'dbms:cooperative_soondue_all' %}">{{ soondue_cooperator_count }}</a></h3>
         {% endif %}
     </div>
