--- a/A_dbms/templates/dbms/appraisal/scan/appraisal-summry.html
+++ b/A_dbms/templates/dbms/appraisal/scan/appraisal-summry.html
@@ -19,7 +19,9 @@
 
     <div class="panel-body row" style="padding: 1px;">
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">客户名称：{{ article_obj.custom.short_name }}</label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">项目编号：{{ article_obj.article_num }}</label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">项目编号：
+            <a target="_blank" href="{% url 'dbms:article_scan' article_id=article_obj.id %}">
+                {{ article_obj.article_num }}</a></label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">纪要编号：{{ article_obj.summary_num }}</label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">金额合计：{{ article_obj.amount }}</label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">续贷金额：{{ article_obj.renewal }}</label>
