--- a/A_dbms/templates/dbms/appraisal/summary/guarantee-th.html
+++ b/A_dbms/templates/dbms/appraisal/summary/guarantee-th.html
@@ -30,7 +30,7 @@
 </tr>
 <tr>{#项目名称#}
     <td class="bb">项目名称</td>
-    <td class="bb" colspan="4">{{ article_obj.custom }}</td>
+    <td class="bb" colspan="4">{{ article_obj.custom.name }}</td>
 </tr>
 <tr>{#所属行业#}
     <td class="bb">所属行业</td>
