--- a/A_dbms/templates/dbms/appraisal/scan/appraisal-summry.html
+++ b/A_dbms/templates/dbms/appraisal/scan/appraisal-summry.html
@@ -4,7 +4,9 @@
         <label class="navbar-right">
             {% if not lending_obj %}
                 <a class="btn btn-primary btn-sm " id="summaryScan" target="_blank"
-                   href="{% url 'dbms:appraisal_summary_scan' article_id=article_obj.id %}">纪要预览</a><!--#path(' '-->
+                   href="{% url 'dbms:appraisal_summary_scan' article_id=article_obj.id %}">意见书</a><!--#path(' '-->
+                <a class="btn btn-primary btn-sm " id="signScan" target="_blank"
+                   href="{% url 'dbms:appraisal_sign_scan' article_id=article_obj.id %}">签批单</a><!--#path(' '-->
                 <a class="btn btn-primary btn-sm " id="singleQuota">单项额度</a><!--#path('appraisal/single/add/'-->
                 <a class="btn btn-primary btn-sm " id="lendingOrder">放款次序</a><!--#path('appraisal/lending/add/'-->
                 <a class="btn btn-primary btn-sm " id="articleSignB">项目签批</a><!--#path('appraisal/sign/'-->
